this is  last  commit

--- a/index.html
+++ b/index.html
@@ -189,6 +189,34 @@
           </button>
         </div>
       </section>
+      <section class="featured display-flex">
+        <div class="content-image">
+          <img class="featured-img" src="./images/gear.png" alt="" />
+        </div>
+
+        <div class="content">
+          <h2>Featured products at one place</h2>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <button class="btn-2">
+            <span>Join Now</span>
+            <span><i class="fa-solid fa-arrow-right"></i></span>
+          </button>
+        </div>
+      </section>
     </main>
+    <footer class="container footer-container">
+      <h2>Influencer products</h2>
+      <p>Copyright © 2020 influencer products</p>
+      <p>All rights reserved</p>
+      <div class="icons display-flex">
+        <div class="icon-footer"><i class="fa-brands fa-instagram"></i></div>
+        <div class="icon-footer"><i class="fa-brands fa-x-twitter"></i></div>
+        <div class="icon-footer"><i class="fa-brands fa-youtube"></i></div>
+      </div>
+    </footer>
   </body>
 </html>
